--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^7.6.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^4.21.2",
-    "mongoose": "^7.8.7",
+    "dotenv": "^16.3.1",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   },
   "keywords": [],
   "author": "",
