--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,15 @@
 {
   "version": 2,
-  "public": true,
   "builds": [
     {
-      "src": "server.js",
+      "src": "api/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "server.js",
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-        "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept"
-      }
+      "src": "/api/(.*)",
+      "dest": "api/index.js"
     }
   ],
   "env": {
