--- a/package.json
+++ b/package.json
@@ -2,20 +2,14 @@
   "name": "jobportal-backend",
   "version": "1.0.0",
   "description": "Backend for Job Portal Application",
-  "main": "api/index.js",
   "scripts": {
-    "start": "node api/index.js",
-    "dev": "nodemon api/index.js"
+    "dev": "vercel dev"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^4.18.2",
-    "mongoose": "^7.8.7",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "^7.8.7"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "vercel": "^latest"
   },
   "engines": {
     "node": ">=14.0.0"
