--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,18 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.js",
+      "src": "api/**/*.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "api/index.js"
+      "src": "/api/jobs",
+      "dest": "/api/jobs/index.js"
+    },
+    {
+      "src": "/api/health",
+      "dest": "/api/health/index.js"
     }
   ],
   "env": {
