--- a/package.json
+++ b/package.json
@@ -2,14 +2,20 @@
   "name": "jobportal-backend",
   "version": "1.0.0",
   "description": "Backend for Job Portal Application",
+  "main": "server.js",
   "scripts": {
-    "dev": "vercel dev"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "mongoose": "^7.8.7"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.6.3",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "vercel": "^latest"
+    "nodemon": "^3.0.1"
   },
   "engines": {
     "node": ">=14.0.0"
