--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/**/*.js",
+      "src": "api/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/api/jobs/(.*)",
-      "dest": "/api/jobs.js"
-    },
-    {
-      "src": "/api/jobs",
-      "dest": "/api/jobs.js"
+      "src": "/api/(.*)",
+      "dest": "/api/index.js"
     }
   ],
   "env": {
