--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "jobportal_backend",
   "version": "1.0.0",
   "description": "Job Portal Backend",
-  "main": "server.js",
+  "main": "api/index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node api/index.js",
+    "dev": "nodemon api/index.js",
     "vercel-build": "echo 'Building...'"
   },
   "dependencies": {
